--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.20+21
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.2.0 <3.5.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,25 +29,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.4
-  flutter_secure_storage: ^5.0.2
-  provider: ^6.0.1
-  location: ^4.4.0
-  socket_io_client: 2.0.0-beta.4-nullsafety.0
-  uuid: ^3.0.6
-  google_maps_flutter: ^2.1.8
-  flutter_polyline_points: ^1.0.0
-  google_maps_webservice: ^0.0.19
-  shared_preferences: ^2.0.15
-  qr_code_scanner: ^1.0.0
-  package_info_plus: ^1.4.2
+  http: ^1.2.0
+  flutter_secure_storage: ^9.0.0
+  provider: ^6.1.1
+  location: ^5.0.3
+  socket_io_client: ^2.0.3+1
+  uuid: ^4.3.3
+  google_maps_flutter: ^2.5.3
+  flutter_polyline_points: ^2.0.0
+  flutter_google_maps_webservices: ^1.1.1
+  shared_preferences: ^2.2.2
+  qr_code_scanner: ^1.0.1
+  package_info_plus: ^5.0.1
   toast:
     git:
       url: https://github.com/appdev/FlutterToast.git
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +66,7 @@ flutter_icons:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
