--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.20+21
 
 environment:
-  sdk: ">=3.2.0 <3.5.0"
+  sdk: ">=3.2.0 <3.6.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,15 +32,15 @@ dependencies:
   http: ^1.2.0
   flutter_secure_storage: ^9.0.0
   provider: ^6.1.1
-  location: ^5.0.3
+  location: ^7.0.0
   socket_io_client: ^2.0.3+1
   uuid: ^4.3.3
   google_maps_flutter: ^2.5.3
   flutter_polyline_points: ^2.0.0
   flutter_google_maps_webservices: ^1.1.1
   shared_preferences: ^2.2.2
-  qr_code_scanner: ^1.0.1
-  package_info_plus: ^5.0.1
+  mobile_scanner: ^5.2.2
+  package_info_plus: ^8.0.2
   toast:
     git:
       url: https://github.com/appdev/FlutterToast.git
@@ -53,8 +53,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "^0.9.2"
-  flutter_native_splash: ^1.3.2
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.1
 
 flutter_icons:
   android: "launcher_icon"
