--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ if (keyStorePropertiesFile.exists()) {
 
 android {
     compileSdkVersion 34
-    namespace("com.mibus.mibusdriver")
+    namespace("com.mibus.conductor")
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -50,7 +50,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.mibus.mibusdriver"
+        applicationId "com.mibus.conductor"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
