--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.22+22
+version: 1.0.23+23
 
 environment:
   sdk: ">=3.2.0 <4.0.0"
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.3.3
   simple_barcode_scanner: ^0.2.5
   package_info_plus: ^8.0.2
+  url_launcher: ^6.3.1
   toast:
     git:
       url: https://github.com/appdev/FlutterToast.git
